<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.CalendarFragment">

    <data class="CalendarListBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.ilsamil.readingdiary.viewmodel.CalendarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F3F3">

        <!-- 헤더 -->
        <LinearLayout
            android:id="@+id/calendar_header_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/cal_prev_btn"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/selector_cal_btn"
                android:src="@drawable/ic_baseline_navigate_before_24" />

            <TextView
                android:id="@+id/cal_currentDate_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:padding="16dp"
                android:textAlignment="center"
                android:textColor="#6E6E6E"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:text="2022년 06월" />

            <ImageButton
                android:id="@+id/cal_next_btn"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/selector_cal_btn"
                android:src="@drawable/ic_baseline_navigate_next_24" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <!-- 요일 -->
        <LinearLayout
            android:id="@+id/calendar_day_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/calendar_header_ly">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="#878787"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday"
                android:textColor="#878787"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textColor="#878787"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textColor="#878787"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday"
                android:textColor="#878787"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday"
                android:textColor="#878787"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday"
                android:textColor="#878787"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 달력 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cal_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/calendar_day_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>